log/build_2024-04-15_11-31-32/uav_tf2_test/stdout_stderr.log
[35m[1mScanning dependencies of target tf2_listener[0m
[ 14%] Built target camera_tf2_broadcaster
[ 28%] Built target uav_node
[ 42%] Built target lidar_node
[ 57%] Built target camera_node
[ 71%] Built target lidar_tf2_broadcaster
[ 85%] Built target uav_tf2_broadcaster
[ 92%] [32mBuilding CXX object CMakeFiles/tf2_listener.dir/src/tf2_listener.cpp.o[0m
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp: In constructor ‘FrameListener::FrameListener()’:
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:22:5: error: ‘source_frame_1’ was not declared in this scope
   22 |     source_frame_1 = this->declare_parameter<std::string>("source_frame", "camera");
      |     ^~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:23:5: error: ‘source_frame_2’ was not declared in this scope
   23 |     source_frame_2 = this->declare_parameter<std::string>("source_frame", "lidar");
      |     ^~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp: In member function ‘void FrameListener::on_timer()’:
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:37:33: error: ‘source_frame_1’ was not declared in this scope
   37 |     std::string fromFrameRel1 = source_frame_1.c_str();
      |                                 ^~~~~~~~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:38:33: error: ‘source_frame_2’ was not declared in this scope
   38 |     std::string fromFrameRel2 = source_frame_2.c_str();
      |                                 ^~~~~~~~~~~~~~
In file included from /opt/ros/galactic/include/rclcpp/client.hpp:40,
                 from /opt/ros/galactic/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/galactic/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/galactic/include/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/galactic/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/galactic/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/galactic/include/rclcpp/executor.hpp:36,
                 from /opt/ros/galactic/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/galactic/include/rclcpp/executors.hpp:21,
                 from /opt/ros/galactic/include/rclcpp/rclcpp.hpp:156,
                 from /home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:8:
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:51:57: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘translation’
   51 |           fromFrameRel1.c_str(), toFrameRel.c_str(), t1.translation.x,
      |                                                         ^~~~~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:52:14: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘translation’
   52 |           t1.translation.y, t1.translation.z, t1.rotation.x,
      |              ^~~~~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:52:32: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘translation’
   52 |           t1.translation.y, t1.translation.z, t1.rotation.x,
      |                                ^~~~~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:52:50: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘rotation’
   52 |           t1.translation.y, t1.translation.z, t1.rotation.x,
      |                                                  ^~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:53:14: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘rotation’
   53 |           t1.rotation.y, t1.rotation.z, t1.rotation.w
      |              ^~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:53:29: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘rotation’
   53 |           t1.rotation.y, t1.rotation.z, t1.rotation.w
      |                             ^~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:53:44: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘rotation’
   53 |           t1.rotation.y, t1.rotation.z, t1.rotation.w
      |                                            ^~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:68:57: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘translation’
   68 |           fromFrameRel2.c_str(), toFrameRel.c_str(), t2.translation.x,
      |                                                         ^~~~~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:69:14: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘translation’
   69 |           t2.translation.y, t2.translation.z, t2.rotation.x,
      |              ^~~~~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:69:32: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘translation’
   69 |           t2.translation.y, t2.translation.z, t2.rotation.x,
      |                                ^~~~~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:69:50: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘rotation’
   69 |           t2.translation.y, t2.translation.z, t2.rotation.x,
      |                                                  ^~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:70:14: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘rotation’
   70 |           t2.rotation.y, t2.rotation.z, t2.rotation.w
      |              ^~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:70:29: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘rotation’
   70 |           t2.rotation.y, t2.rotation.z, t2.rotation.w
      |                             ^~~~~~~~
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:70:44: error: ‘using TransformStamped = struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’ {aka ‘struct geometry_msgs::msg::TransformStamped_<std::allocator<void> >’} has no member named ‘rotation’
   70 |           t2.rotation.y, t2.rotation.z, t2.rotation.w
      |                                            ^~~~~~~~
make[2]: *** [CMakeFiles/tf2_listener.dir/build.make:63: CMakeFiles/tf2_listener.dir/src/tf2_listener.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:279: CMakeFiles/tf2_listener.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
